--- a/css/style.css
+++ b/css/style.css
@@ -30,17 +30,11 @@ ul, ol {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: fit-content;
+    height: fit-content;   
     background-image: url("../img/probarbackheader.jpeg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-  
-
-
-    
-    
-
 }
 
 
@@ -75,6 +69,16 @@ ul, ol {
     font-weight: 300;
     flex-wrap: wrap;
     
+}
+
+.product-hombre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40%;
+    font-weight: 300;
+    flex-wrap: wrap;  
 }
 /*/ los 3 sections de todos los articulos /*/
 
