--- a/css/style.css
+++ b/css/style.css
@@ -125,19 +125,21 @@
 
 .home-sections{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    height: 40%;
-    font-weight: 300;
-    flex-wrap: wrap;  
+    flex-wrap: wrap; 
+    justify-content: space-around;
+    padding: 20px;
+}
 
-}
 .producto{
-   flex-direction: column;
-   flex-wrap: wrap;
-   justify-content: center;
+    width:30%;
+    margin: 10px;
+    padding: 20px ;
+    background-color: white;
+    border-radius: 5px;
 }
+
+
+
 
 
 /*/ARTICULOS CAJA PADRE/*/
