--- a/css/style.css
+++ b/css/style.css
@@ -128,19 +128,21 @@
     flex-wrap: wrap; 
     justify-content: space-around;
     padding: 20px;
+    flex-direction: column;
 }
 
+
 .producto{
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-around;
+    padding: 20px;
     width:30%;
     margin: 10px;
     padding: 20px ;
     background-color: white;
     border-radius: 5px;
 }
-
-
-
-
 
 /*/ARTICULOS CAJA PADRE/*/
 .articulos-padre{
