--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ h2 {
 /*/CART/*/
 
 .compras {
-    margin: 80px;
+    margin: 60px;
 
 }
 
@@ -224,7 +224,10 @@ h2 {
 
 }
 
-
+.titulo-cart {
+    margin: 40px;
+    text-decoration: underline;
+}
 
 
 
