--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@
     padding: 16px 65px;
     background-color: rgba(0, 0, 0, 0.161);
     height: fit-content;
+    font-weight: bold;
+    color: black;
+    display: flex;
+    list-style: none;
+    gap: 40px;
+
+    
 }
 
 
@@ -42,57 +49,9 @@
     height: fit-content;   
     font-size: 30px;
 }
+
+
 /*/Main/*/
-.producto img{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    width: 80%;
-    object-fit: contain;
-    
-
-}
-.home-sections{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-
-}
-
-/*/ FOOTER /*/
-.footer , .footernom {
-    pad: 16px 20px;
-    background-color: white;
-
-
-
-}
-.footnom ul{
-    padding: 20px;
-    list-style: none;
-    position: static;
-    background-color: white;
-
-
-
-}
-
-
-
-
-.lista{
-    font-weight: bold;
-    color: black;
-    display: flex;
-    list-style: none;
-    gap: 40px;
-
-}
-
-
-/*/ MAIN /*/
 
 .articulos-padre{
     background-attachment: fixed;
@@ -106,6 +65,7 @@
     justify-content: space-between;
    
 }
+
 .producto{
     flex-direction: row;
     justify-content: flex-start;
@@ -116,11 +76,27 @@
 
 
 
-
-/*/ productos/*/
-
-h2 {
+.producto img{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 80%;
+    object-fit: contain;
     
+
+}
+
+.home-sections{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+
+}
+/*/Categorias/*/
+.category{
+    display: flex;
     justify-content: center;
     font-weight: 30px;
     flex-wrap: wrap;  
@@ -128,11 +104,38 @@ h2 {
     font-family: "Reddit Mono", monospace;
     text-transform: capitalize;
     text-align: center;
-        
+    background-color: hsl(196, 20%, 45%);
+}
+.category-mujer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 
 
+
+/*/ titulo productos index/*/
+
+.h2 {
+    display: flex;
+    justify-content: center;
+    font-weight: 30px;
+    flex-wrap: wrap;  
+    font-size: 30px;
+    font-family: "Reddit Mono", monospace;
+    text-transform: capitalize;
+    text-align: center;
+    background-color: hsl(196, 20%, 45%);
+}
+.titulo-producto{
+    justify-content: center;
+    font-weight: 25px; 
+    font-size: 25px;
+    font-family: "Reddit Mono", monospace;
+    text-transform: capitalize;
+    text-align: center;
+}
 /*/ PRODUCT DETAIL /*/
 .buzo-detail{
     flex-direction: row;
@@ -163,7 +166,7 @@ h2 {
     text-align: center;
 }
 
-/*/PRODUCT DETAILS /*/
+
 
 /*/CART/*/
 
@@ -229,31 +232,93 @@ h2 {
     text-decoration: underline;
 }
 
-
-
-
-/*/PRUEBAS/*/
-
-/*/ los 3 sections de todos los articulos /*/
-/*/
-.home-sections{
+/*/ FOOTER /*/
+.footer{
+    position:static;
     display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-between;
-    flex-direction: row;
-    width: auto;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    padding: 16px 40px;
+    background-color: hsl(196, 20%, 45%);
+    flex-wrap: wrap;
+    height: fit-content;
+}
+.footer ul {
+    display: flex;
+    list-style: none;
+    gap: 40px;
+    flex-wrap: wrap;
+    height: fit-content;
+    background-color: hsl(196, 20%, 45%);
+    color: hsl(197, 21%, 26%);
+    font-size: 20x;
 }
 
 
-.producto{
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-around;
-    padding: 20px;
-    width:auto;
-    margin: 10px;
-    padding: 20px ;
-    background-color: white;
-    border-radius: 5px;
+/*/ RESPONSIVE*/
+
+
+
+
+@media(max-width:420px){
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
 }
-/*/
+
+@media(max-width:420px){
+    .footer {
+        flex-direction: column;
+    }
+}
+
+@media(max-width:420px){
+    .lista {
+        flex-direction: column;
+        text-align: center;
+
+    }
+}
+
+@media(max-width:420px){
+    .footnom {
+        flex-direction: column;
+        height: 250px;
+    }
+}
+
+@media(max-width:420px){
+    .home-sections, .articulos-padre, .producto {
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+
+@media(max-width:420px){
+    .category-mujer {
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+    }
+}
+@media(max-width:420px){
+    .category-mujer, .producto {
+        width: 90%;
+        margin-bottom: 20%;
+        align-items: center;
+        
+    }
+}
+@media(max-width:420px){
+    .register {
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        
+    }
+}
+
