--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ h3{
     justify-content: flex-start;
     width: 80%;
     object-fit: contain;
+   
     
 
 }
@@ -110,6 +111,8 @@ h3{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 30px;
+    
 }
 
 
