--- a/css/style.css
+++ b/css/style.css
@@ -320,21 +320,14 @@ h3{
 
 /*/ RESPONSIVE*/
 
-@media(max-width:720px){
-    .register, .category-mujer, .producto, .header, .footer , .footnom, .lista,  .home-sections, .articulos-padre, .producto, .loging {
+
+@media(max-width:420px){
+    .header {
         flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        
+        align-items: center;
     }
 }
 
-
-
-
-
-
-/*/
 @media(max-width:420px){
     .footer {
         flex-direction: column;
@@ -372,7 +365,6 @@ h3{
         display: flex;
     }
 }
-
 @media(max-width:420px){
     .category-mujer, .producto {
         width: 90%;
@@ -381,6 +373,12 @@ h3{
         
     }
 }
-/*/
-
+@media(max-width:420px){
+    .register {
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        
+    }
+}
 
