--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,10 @@ h3{
 /*/CART/*/
 
 .compras {
-    margin: 60px;
+    margin: 100px;
+    display: flex;
+    justify-content: center;
+    
 
 }
 
@@ -213,31 +216,32 @@ h3{
     flex-wrap: wrap;
     max-height: 300px;
     align-items: center;
+    margin-bottom: 20px;
+    gap: 180px;
+    align-items: flex-start;
     
-
 }
 
-.infoproducto1{
-    margin: 40px;
+.infoproducto{ 
+    box-shadow: 0px 0px 5px 0px rgb(0, 0, 0, 0.75);
+    border-radius: 20px;
+    
+  
+   
+}
+.info {
     max-width: 200px;
-}
-.infoproducto2{
-    margin: 100px;
-    max-width: 200px
-
+    
 }
 
-.imgprod1{
+
+
+.img{
     width: 200px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
 }
 
-.imgprod2{
-    width: 200px;
-}
-
-.imgprod3 {
-    width: 200px;
-}
  
 .eliminar-button{
     color: rgb(75, 1, 1);
