--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 30px;
+    flex-wrap: wrap;
+
+
+    
     
    
 }
@@ -68,6 +72,18 @@
     flex-wrap: wrap;
     width: 30%;
     object-fit: contain;
+    flex: 0 0 calc(33.333%-20px);
+    margin: 10px;
+    text-align: center;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+
+     
 }
 
 
@@ -77,10 +93,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    width: 80%;
     object-fit: contain;
-   
-    
+    max-width: 100%;
+    height: auto;
 
 }
 
@@ -88,8 +103,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-
+    
+  
 }
 /*/Categorias/*/
 .category{
@@ -201,7 +216,7 @@
 
 
 /*/CART/*/
-
+/*/
 .compras {
     margin: 100px;
     display: flex;
@@ -240,6 +255,7 @@
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
 }
+/*/
 
  
 .eliminar-button{
