--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@
     flex-wrap: wrap;
     width: 30%;
     object-fit: contain;
-    flex: 0 0 calc(33.333%-20px);
+    width: 30%;
+    margin-right: 3%; 
     margin: 10px;
     text-align: center;
     margin-top: 10px;
@@ -143,6 +144,7 @@
     background-color: hsl(196, 20%, 45%);
     margin-top: 40px;
 }
+
 .titulo-producto{
     justify-content: center;
     font-weight: 25px; 
@@ -151,6 +153,7 @@
     text-transform: capitalize;
     text-align: center;
 }
+
 /*/ PRODUCT DETAIL /*/
 .buzo-detail{
     flex-direction: row;
