--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@
     background-color: hsl(196, 20%, 45%);
     margin-top: 40px;
 }
+/*/
 .titulo-producto{
     justify-content: center;
     font-weight: 25px; 
