--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,10 @@
     background-color: hsl(196, 20%, 45%);
     margin-top: 40px;
 }
-<<<<<<< HEAD
+
 /*/
 =======
 
->>>>>>> 1548129 (correcciones)
 .titulo-producto{
     justify-content: center;
     font-weight: 25px; 
@@ -299,6 +298,7 @@
     text-align: center;
     background-color: hsl(196, 20%, 45%);
 }
+/*/
 
 /*/ RECOVER /*/
 
