casi terminado el recover

--- a/css/style.css
+++ b/css/style.css
@@ -326,17 +326,28 @@ h3.buzo-bakery{
 
 /*/ RECOVER /*/
 
-
-.pass-main{
+.container-form {
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.form{
     text-align: center;
-    line-height: 200%;
-    margin: 40px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.email {
-    color: brown;
+.message {
+    margin: 10px 0;
+    color: red;
 }
-
+.success {
+    color: green;
+}
 
 /*/ FOOTER /*/
 .footer{
