--- a/css/style.css
+++ b/css/style.css
@@ -246,81 +246,19 @@ h3.buzo-bakery{
 
 
 /*/CART/*/
-/*/
-.compras {
-    margin: 100px;
-    display: flex;
-    justify-content: center;
-    
 
-}
-
-.productos2 {
-    display: flex;
-    flex-wrap: wrap;
-    max-height: 300px;
-    align-items: center;
-    margin-bottom: 20px;
-    gap: 180px;
-    align-items: flex-start;
-    
-}
-
-.infoproducto{ 
-    box-shadow: 0px 0px 5px 0px rgb(0, 0, 0, 0.75);
-    border-radius: 20px;
-    
-  
-   
-}
-.info {
-    max-width: 200px;
-    
-}
-
-
-
-.img{
-    width: 200px;
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-}
-/*/
-
- 
-.eliminar-button{
-    color: rgb(75, 1, 1);
-
-}
-
-.compra-final{
-    margin-top: 300px;
-    margin-bottom: 20px;;
+.carrito-total {
     text-align: center;
-
+    margin-top: 20px;
+    font-size: 20px;
 }
 
-.precio-total{
-    font-size: large;
-
-}
-
-.comprar-button {
+#carritoComprar {
     background-color: rgb(210, 138, 3);
     font-size: large;
-
-}
-
-.titulo-cart {
-    display: flex;
-    justify-content: center;
-    font-weight: 30px;
-    flex-wrap: wrap;  
-    font-size: 30px;
-    font-family: "Reddit Mono", monospace;
-    text-transform: capitalize;
-    text-align: center;
-    background-color: hsl(196, 20%, 45%);
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
 }
 
 
