termine recover.js

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ h3.buzo-bakery{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.message {
+.mensaje {
     margin: 10px 0;
     color: red;
 }
