--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,11 @@ h3{
     color: black;
     display: flex;
     list-style: none;
-    gap: 40px;  
+    gap: 40px;
+}
+
+.lista li{
+    margin-right: 10px;
 }
 
 /*/ HEADER /*/
@@ -59,6 +63,10 @@ h3{
     align-items: center;
     height: fit-content;   
     font-size: 30px;
+}
+
+.bienvenida-container{
+    flex: 1;
 }
 
 /*/
