--- a/css/style.css
+++ b/css/style.css
@@ -53,23 +53,25 @@ h3{
     height: fit-content;   
     font-size: 30px;
 }
-
+/*/
 #bienvenida{
     padding: 16px 65px;
     background-color: rgb(129, 174, 219);
     position: static;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     height: fit-content;   
     font-size: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
+
 
 .bienvenida-container{
     flex: 1;
 }
 
-/*/
+
 .logout-btn {
     margin-left: 10px; 
     background-color: #f44336; 
@@ -152,7 +154,7 @@ h3{
 
 
 /*/Categorias/*/
-.category{
+.category, .category-title, #bienvenida{
     margin: 16px;
     display: flex;
     justify-content: center;
@@ -381,14 +383,62 @@ h3{
 
 
 /*/ RESPONSIVE*/
+@media(max-width: 900px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
 
-@media(max-width:720px){
-    .register, .header, .category, .category-mujer, .home-sections, .articulos-padre, .producto, .footer, .footnom, .header, .lista, .button, .login, .button-ver, .lista {
+    .lista {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .articulos-padre {
+        margin: 10px;
+    }
+
+    .producto {
+        width: 100%;
+    }
+
+    .footer {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer ul {
+        justify-content: center;
+    }
+}
+/*/Responsive
+
+@media(max-width:900px){
+
+    .register, .category, .category-mujer, .home-sections, .articulos-padre, .producto, .footer, .footnom, .lista, .button, .login, .button-ver {
         flex-direction: column;
         justify-content: center;
         margin: 10px;
         width: 95%;
         text-align: center;
+    }
+    .header{
+        align-items: flex-start;
+        flex-direction: column;
+        height: 20%;
+        width: 20%;
+        margin:15px;
+        flex-wrap: wrap;
+        
+    }
+    .lista {
+        margin: 10px 0;
+        flex-direction: column;
+    }
+    .logo{
+        flex-wrap: wrap;
+
     }
 }
 
