arreglo de errores en index.js e index.html para que funcione bien la pagina de detalle de producto y ajustes de css

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,12 @@ h3{
     margin-top: 40px;
 }
 
+.producto-categoria{
+    background-color: rgb(131, 129, 129);
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+}
 
 .titulo-producto{
     justify-content: center;
