--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,15 @@ h3{
     display: inline-block;
 }
 
-
+#logout-button {
+    border: none;
+    color: rgb(220, 12, 12);
+    cursor: pointer;
+    padding: 0;
+    font-size: 30px;
+    font-family: "Reddit Mono", monospace;
+    text-transform: capitalize;
+}
 
 /*/ RESPONSIVE*/
 @media(max-width: 900px) {
@@ -457,5 +465,7 @@ h3{
 
     }
 }
+
+
 
 
