--- a/css/style.css
+++ b/css/style.css
@@ -99,28 +99,6 @@ h3{
     flex-wrap: wrap;    
 }
 
-.producto{
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    width: 30%;
-    object-fit: contain;
-    width: 30%;
-    margin-right: 3%; 
-    margin: 10px;
-    text-align: center;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    border-radius: 5px;
-    display: inline-block;
-
-     
-}
-
-
 
 .producto img{
     display: flex;
@@ -139,6 +117,45 @@ h3{
     justify-content: flex-start;
     flex-wrap: wrap;
 
+}
+.producto{
+    margin: 16px;
+    display: flex;
+    justify-content: center;
+    font-weight: 15px;
+    flex-wrap: wrap;  
+    font-size: 15px;
+    font-family: "Reddit Mono", monospace;
+    text-transform: capitalize;
+    text-align: center;
+    background-color: hsl(196, 20%, 45%);
+    max-width: 25%;
+    max-height:25%;
+    margin-top: 10px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+
+    /*/
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    object-fit: contain;
+    width: 30%;
+    margin-right: 3%; 
+    margin: 10px;
+    text-align: center;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+/*/
+     
 }
 
 
